--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -16,3 +16,19 @@ a {
 li {
   list-style: none;
 }/*# sourceMappingURL=style.css.map */
+
+
+.labels {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+  span {
+    color: #666;
+  }
+}
+.progress {
+  height: 5px;
+}
+.progress-bar {
+background: -webkit-linear-gradient(left, #33156d 0%,#f282bc 100%); /* Chrome10-25,Safari5.1-6 */
+}
