add my resume section and some js

--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -15,4 +15,21 @@ a {
 
 li {
   list-style: none;
+}
+
+.labels {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+.labels span {
+  color: #666;
+}
+
+.progress {
+  height: 8px;
+}
+
+.progress-bar {
+  background: -webkit-linear-gradient(left, #ff014f 0%, #ffa6c1 100%); /* Chrome10-25,Safari5.1-6 */
 }/*# sourceMappingURL=style.css.map */
